[package]
name = "lazymc"
version = "0.1.0"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "GPL-3.0"
readme = "README.md"
# homepage = "https://timvisee.com/projects/lazymc"
repository = "https://gitlab.com/timvisee/lazymc"
description = "Put your Minecraft server to rest when idle."
keywords = ["minecraft", "server", "idle", "cli"]
categories = [
    "command-line-interface",
    "games",
]
exclude = [
    "/.github",
    "/contrib",
]
edition = "2021"

[features]
default = ["rcon"]
rcon = ["rust_rcon"]

[dependencies]
anyhow = "1.0"
bytes = "1.1"
clap = "3.0.0-beta.5"
colored = "2.0"
derive_builder = "0.10"
dotenv = "0.15"
futures = { version = "0.3", default-features = false }
log = "0.4"
minecraft-protocol = { git = "https://github.com/timvisee/minecraft-protocol", rev = "31041b8" }
pretty_env_logger = "0.4"
rand = "0.8"
serde = "1.0"
shlex = "1.1"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "io-util", "net", "macros", "time", "process", "signal"] }
toml = "0.5"

# Feature: rcon
rust_rcon = { package = "rcon", version = "0.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "ntdef", "minwindef"] }
